--- a/index.html
+++ b/index.html
@@ -1,96 +1,109 @@
 <!DOCTYPE HTML PUBLIC>
-<html ng-app="">
+<html ng-app="myApp">
 <head>
-    <title>ngMadLibs</title>
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.5/angular.min.js"></script>
-    <style> 
-        input { margin-right: 20px; } 
-    </style>
+  <title>ngMadLibs</title>
+  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.5/angular.min.js"></script>
+  <script type="text/javascript" src="myApp.js"></script>
+  <style> 
+      input { margin-right: 20px; } 
+  </style>
 </head>
 <body>
 
 <center>
-    <!-- Start Container -->
-    <table width="100%" cellpadding="0" cellspacing="0" style="table-layout: fixed; margin:25px;" class="marginfix">
-        <!--end pre-header -->
-        <tr>
-            <td align="center" valign="top" width="640">
-                <!-- Start Hero Image -->
-                <table cellpadding="0" cellspacing="0" width="640">
-                    <tr>
-                        <td align="center" valign="top" width="640" style="border: 5px solid #000000;">
-                            <table cellpadding="0" cellspacing="0" width="640">
+  <!-- Start Container -->
+  <table width="100%" cellpadding="0" cellspacing="0" style="table-layout: fixed; margin:25px;" class="marginfix">
+    <!--end pre-header -->
+    <tr>
+      <td align="center" valign="top" width="640">
+        <!-- Start Hero Image -->
+        <table cellpadding="0" cellspacing="0" width="640">
+          <tr>
+            <td align="center" valign="top" width="640" style="border: 5px solid #000000;">
+              <table cellpadding="0" cellspacing="0" width="640">
+                <tr>
+                  <td width="640">
+                    <table cellpadding="0" cellspacing="0" width="640">
+                      <tr>
+                        <td width="120" style="border-bottom: 5px solid #000000; padding:10px 30px;">
+                            <img src="images/happyface.png" width="100" height="100" style="display:block; border:0;" alt="Virgin America" />
+                        </td>
+                        <td width="470" style="border-bottom: 5px solid #000000; border-left: 5px solid #000000;">
+                            <table cellpadding="0" cellspacing="0" width="470">
                                 <tr>
-                                    <td width="640">
-                                        <table cellpadding="0" cellspacing="0" width="640">
-                                            <tr>
-                                                <td width="120" style="border-bottom: 5px solid #000000; padding:10px 30px;">
-                                                    <img src="images/happyface.png" width="100" height="100" style="display:block; border:0;" alt="Virgin America" />
-                                                </td>
-                                                <td width="470" style="border-bottom: 5px solid #000000; border-left: 5px solid #000000;">
-                                                    <table cellpadding="0" cellspacing="0" width="470">
-                                                        <tr>
-                                                            <td width="470" align="center" valign="top" style="font-size:30px; font-family: Helvetica; color:#ffffff; -webkit-text-size-adjust:100%;">
-                                                                <img src="images/ngmadlibs.png" width="350" height="75" style="display:block; border:0;" alt="Virgin America" />
-                                                            </td>
-                                                        </tr>
-                                                        <tr>
-                                                            <td width="470" align="center" valign="top" style="font-size:30px; font-family: Tahoma; color:#000000; -webkit-text-size-adjust:100%;">
-                                                                Automate This!
-                                                            </td>
-                                                        </tr>
-                                                    </table>
-                                                </td>
-                                            </tr>
-                                        </table>
+                                    <td width="470" align="center" valign="top" style="font-size:30px; font-family: Helvetica; color:#ffffff; -webkit-text-size-adjust:100%;">
+                                        <img src="images/ngmadlibs.png" width="350" height="75" style="display:block; border:0;" alt="Virgin America" />
                                     </td>
                                 </tr>
                                 <tr>
-                                    <td width="640">
-                                        <table cellpadding="0" cellspacing="0" width="640">
-                                            <tr>
-                                                <td style="padding:25px; font-family: Tahoma; line-height:30px;">
-                                                    Provide the following words:
-                                                </td>
-                                            </tr>
-                                            <tr>
-                                                <td align="center" style="font-family: Tahoma; line-height:30px;">
-                                                    <input ng-model="male_name" type="text" placeholder="male name">
-                                                    <input ng-model="dirty_task" type="text" placeholder="dirty task">
-                                                    <input ng-model="obnox_celeb" type="text" placeholder="Obnoxious celebrity">
-                                                    <br>
-                                                    <input ng-model="job_title" type="text" placeholder="Job title">
-                                                    <input ng-model="celebrity" type="text" placeholder="Celebrity">
-                                                    <input ng-model="huge_number" type="text" placeholder="Huge number">
-                                                    <br>
-                                                    <input ng-model="tedious_task" type="text" placeholder="Tedious task">
-                                                    <input ng-model="useless_skill" type="text" placeholder="Useless skill">
-                                                    <input ng-model="adjective" type="text" placeholder="Adjective">
-                                                    <br>
-                                                    <br>
-                                                </td>
-                                            </tr>
-                                            <tr>
-                                                <td style="padding:25px; font-family: Tahoma; line-height:30px; border-top: 5px solid #000000;">
-                                                    <strong style="text-decoration: underline;">{{ male_name }}</strong> was a <strong style="text-decoration: underline;">{{ job_title}}</strong> who loved technology. Although he loved parts of his job, he absolutely hated <strong style="text-decoration: underline;">{{ tedious_task }}</strong> and <strong style="text-decoration: underline;">{{dirty_task }}</strong>. So, <strong style="text-decoration: underline;">{{male_name }}</strong> met with his life mentor <strong style="text-decoration: underline;">{{ celebrity }}</strong> who told him to learn how to <strong style="text-decoration: underline;">{{ useful_skill }}</strong> with Thinkful. Thinkful didn&rsquo;t offer a course on <strong style="text-decoration: underline;">{{ useless_skill }}</strong> so he studied programming instead.
-                                                    <br>
-                                                    <br>
-                                                    What a great decision! With his new skills, <strong style="text-decoration: underline;">{{ male_name }}</strong> built a(n) <strong style="text-decoration: underline;">{{ adjective }}</strong> robot named <strong style="text-decoration: underline;">{{ obnox_celeb }}</strong> that not only loved <strong style="text-decoration: underline;">{{ dirty_task }}</strong> but did it <strong style="text-decoration: underline;">{{ huge_number }}</strong> faster.
-                                                    
-                                                </td>
-                                            </tr>
-                                        </table>
+                                    <td width="470" align="center" valign="top" style="font-size:30px; font-family: Tahoma; color:#000000; -webkit-text-size-adjust:100%;">
+                                        Automate This!
                                     </td>
                                 </tr>
                             </table>
                         </td>
-                    </tr>
-                </table>
-                <!-- End Hero Image -->
+                      </tr>
+                    </table>
+                  </td>
+                </tr>
+                <tr>
+                  <td width="640" ng-controller="GenderCtrl" ng-init="init([{gen_descrip: 'Male', he_she: 'he', his_her: 'his', him_her: 'him'}, {gen_descrip: 'Female', he_she: 'she', his_her: 'her', him_her: 'her'}])">
+                    <table cellpadding="0" cellspacing="0" width="640">
+                      <tr>
+                        <td style="padding:10px 25px; font-family: Tahoma; line-height:30px;">
+                            Provide your gender:
+                        </td>
+                      </tr>
+                      <tr>
+                        <td align="center" style="font-family: Tahoma; line-height:30px;">
+                          <label ng-repeat="gen_option in gen_options" style="margin-right:15px;">
+                            <input type="radio" ng-model="init.gen_option" ng-value="gen_option" ng-checked="selected_gen_option" name="gender" style="margin-right:5px">
+                            {{ gen_option.gen_descrip }}
+                          </label>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td style="padding:25px; font-family: Tahoma; line-height:30px;">
+                            Provide the following words:
+                        </td>
+                      </tr>
+                      <tr>
+                        <td align="center" style="font-family: Tahoma; line-height:30px;">
+                            <input ng-model="your_name" type="text" placeholder="your name">
+                            <input ng-model="dirty_task" type="text" placeholder="dirty task">
+                            <input ng-model="obnox_celeb" type="text" placeholder="Obnoxious celebrity">
+                            <br>
+                            <input ng-model="job_title" type="text" placeholder="Job title">
+                            <input ng-model="celebrity" type="text" placeholder="Celebrity">
+                            <input ng-model="huge_number" type="text" placeholder="Huge number">
+                            <br>
+                            <input ng-model="tedious_task" type="text" placeholder="Tedious task">
+                            <input ng-model="useless_skill" type="text" placeholder="Useless skill">
+                            <input ng-model="adjective" type="text" placeholder="Adjective">
+                            <br>
+                            <br>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td style="padding:25px; font-family: Tahoma; line-height:30px; border-top: 5px solid #000000;">
+                            <strong style="text-decoration: underline;">{{ your_name }}</strong> was a <strong style="text-decoration: underline;">{{ job_title }}</strong> who loved technology. Although {{ init.gen_option.he_she }} loved parts of {{ init.gen_option.his_her }} job, {{ init.gen_option.he_she }} absolutely hated <strong style="text-decoration: underline;">{{ tedious_task }}</strong> and <strong style="text-decoration: underline;">{{dirty_task }}</strong>. So, <strong style="text-decoration: underline;">{{ your_name }}</strong> met with {{ init.gen_option.his_her }} life mentor <strong style="text-decoration: underline;">{{ celebrity }}</strong> who told {{ init.gen_option.him_her }} to learn how to <strong style="text-decoration: underline;">{{ useless_skill }}</strong> with Thinkful. Thinkful didn&rsquo;t offer a course on <strong style="text-decoration: underline;">{{ useless_skill }}</strong> so {{ init.gen_option.he_she }} studied programming instead.
+                            <br>
+                            <br>
+                            What a great decision! With {{ init.gen_option.his_her }} new skills, <strong style="text-decoration: underline;">{{ your_name }}</strong> built a(n) <strong style="text-decoration: underline;">{{ adjective }}</strong> robot named <strong style="text-decoration: underline;">{{ obnox_celeb }}</strong> that not only loved <strong style="text-decoration: underline;">{{ dirty_task }}</strong> but did it <strong style="text-decoration: underline;">{{ huge_number }}</strong> faster.
+                        </td>
+                      </tr>
+                    </table>
+                  </td>
+                </tr>
+              </table>
             </td>
-        </tr>
-    </table>
-    <!-- End Container -->
+          </tr>
+        </table>
+        <!-- End Hero Image -->
+      </td>
+    </tr>
+  </table>
+  <!-- End Container -->
 </center>
 </body>
 </html>
