--- a/index.html
+++ b/index.html
@@ -1,114 +1,112 @@
-<!DOCTYPE HTML PUBLIC>
-<html ng-app="myApp">
-<head>
-  <title>ngMadLibs</title>
-  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.5/angular.min.js"></script>
-  <script type="text/javascript" src="myApp.js"></script>
-  <style> 
-      input { margin-right: 20px; } 
-  </style>
-</head>
-<body>
+<!doctype html>
+<html class="no-js" lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>MadLibs</title>
+    <link rel="stylesheet" href="css/foundation.css" />
+    <link rel="stylesheet" href="css/font-awesome.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link href='http://fonts.googleapis.com/css?family=Nunito' rel='stylesheet' type='text/css'>
+    <script src="js/vendor/modernizr.js"></script>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.5/angular.min.js"></script>
+    <script type="text/javascript" src="myApp.js"></script>
+  </head>
+  <body>
+    <div class="main-wrap">
+      <header>
+        <div class="row">
+          <div class="large-12 columns">
+            <div class="smiley-wrap">
+              <img src="img/happyface.png" alt="smiley face">
+            </div>
+            <div class="hd-wrap">
+              <img src="img/ngmadlibs.png" alt="ngMadLibs Logo">
+              <h1>Automate This!</h1>
+            </div>
+          </div>
+        </div>
+      </header>
+      <div class="form-wrap">
+        <div class="row hd">
+          <div class="large-12 columns">
+            <h3>Select your Gender:</h3>
+          </div>
+        </div>
+        <div class="row">
+          <div class="large-6 columns">   
+            <div class="button gender">
 
-<center>
-  <!-- Start Container -->
-  <table width="100%" cellpadding="0" cellspacing="0" style="table-layout: fixed; margin:25px;" class="marginfix">
-    <!--end pre-header -->
-    <tr>
-      <td align="center" valign="top" width="640">
-        <!-- Start Hero Image -->
-        <table cellpadding="0" cellspacing="0" width="640">
-          <tr>
-            <td align="center" valign="top" width="640" style="border: 5px solid #000000;">
-              <table cellpadding="0" cellspacing="0" width="640">
-                <tr>
-                  <td width="640">
-                    <table cellpadding="0" cellspacing="0" width="640">
-                      <tr>
-                        <td width="120" style="border-bottom: 5px solid #000000; padding:10px 30px;">
-                            <img src="images/happyface.png" width="100" height="100" style="display:block; border:0;" alt="Virgin America" />
-                        </td>
-                        <td width="470" style="border-bottom: 5px solid #000000; border-left: 5px solid #000000;">
-                            <table cellpadding="0" cellspacing="0" width="470">
-                                <tr>
-                                    <td width="470" align="center" valign="top" style="font-size:30px; font-family: Helvetica; color:#ffffff; -webkit-text-size-adjust:100%;">
-                                        <img src="images/ngmadlibs.png" width="350" height="75" style="display:block; border:0;" alt="Virgin America" />
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td width="470" align="center" valign="top" style="font-size:30px; font-family: Tahoma; color:#000000; -webkit-text-size-adjust:100%;">
-                                        Automate This!
-                                    </td>
-                                </tr>
-                            </table>
-                        </td>
-                      </tr>
-                    </table>
-                  </td>
-                </tr>
-                <tr>
-                  <td width="640" ng-controller="GenderCtrl" ng-init="init([{gen_descrip: 'Male', he_she: 'he', his_her: 'his', him_her: 'him'}, {gen_descrip: 'Female', he_she: 'she', his_her: 'her', him_her: 'her'}])">
-                    <table cellpadding="0" cellspacing="0" width="640">
-                      <tr>
-                        <td style="padding:10px 25px; font-family: Tahoma; line-height:30px;">
-                            Provide your gender:
-                        </td>
-                      </tr>
-                      <tr>
-                        <td align="center" style="font-family: Tahoma; line-height:30px;">
-                          <label ng-repeat="gen_option in gen_options" style="margin-right:15px;">
-                            <input type="radio" ng-model="init.gen_option" ng-value="gen_option" ng-checked="selected_gen_option" name="gender" style="margin-right:5px">
-                            {{ gen_option.gen_descrip }}
-                          </label>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td style="padding:25px; font-family: Tahoma; line-height:30px;">
-                            Provide the following words:
-                        </td>
-                      </tr>
-                      <tr>
-                        <td align="center" style="font-family: Tahoma; line-height:30px;">
-                            <input ng-model="your_name" type="text" placeholder="your name">
-                            <input ng-model="dirty_task" type="text" placeholder="dirty task">
-                            <input ng-model="obnox_celeb" type="text" placeholder="Obnoxious celebrity">
-                            <br>
-                            <input ng-model="job_title" type="text" placeholder="Job title">
-                            <input ng-model="celebrity" type="text" placeholder="Celebrity">
-                            <input ng-model="huge_number" type="text" placeholder="Huge number">
-                            <br>
-                            <input ng-model="tedious_task" type="text" placeholder="Tedious task">
-                            <input ng-model="useless_skill" type="text" placeholder="Useless skill">
-                            <input ng-model="adjective" type="text" placeholder="Adjective">
-                            <br>
-                            <br>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td style="padding:25px; font-family: Tahoma; line-height:30px; border-top: 5px solid #000000;">
-                            <strong style="text-decoration: underline;">{{ your_name }}</strong> was a <strong style="text-decoration: underline;">{{ job_title }}</strong> who loved technology. Although {{ init.gen_option.he_she }} loved parts of {{ init.gen_option.his_her }} job, {{ init.gen_option.he_she }} absolutely hated <strong style="text-decoration: underline;">{{ tedious_task }}</strong> and <strong style="text-decoration: underline;">{{dirty_task }}</strong>. So, <strong style="text-decoration: underline;">{{ your_name }}</strong> met with {{ init.gen_option.his_her }} life mentor <strong style="text-decoration: underline;">{{ celebrity }}</strong> who told {{ init.gen_option.him_her }} to learn how to <strong style="text-decoration: underline;">{{ useless_skill }}</strong> with Thinkful. Thinkful didn&rsquo;t offer a course on <strong style="text-decoration: underline;">{{ useless_skill }}</strong> so {{ init.gen_option.he_she }} studied programming instead.
-                            <br>
-                            <br>
-                            What a great decision! With {{ init.gen_option.his_her }} new skills, <strong style="text-decoration: underline;">{{ your_name }}</strong> built a(n) <strong style="text-decoration: underline;">{{ adjective }}</strong> robot named <strong style="text-decoration: underline;">{{ obnox_celeb }}</strong> that not only loved <strong style="text-decoration: underline;">{{ dirty_task }}</strong> but did it <strong style="text-decoration: underline;">{{ huge_number }}</strong> faster.
-                        </td>
-                      </tr>
-                    </table>
-                  </td>
-                </tr>
-              </table>
-            </td>
-          </tr>
-        </table>
-        <!-- End Hero Image -->
-      </td>
-    </tr>
-  </table>
-  <!-- End Container -->
-</center>
-</body>
+              <p> <i class="fa fa-male"></i>Male</p>
+            </div>
+          </div>
+          <div class="large-6 columns">   
+            <div class="button gender">
+              <p><i class="fa fa-female"></i>Female</p>
+            </div>
+          </div>
+        </div>
+        <div class="row hd">
+          <div class="large-12 columns">
+            <h3>Provide the following words:</h3>
+          </div>
+        </div>
+        <div class="row">
+            <div class="large-4 columns">
+              <input type="text" placeholder="Male Name">
+            </div>
+            <div class="large-4 columns">
+              <input type="text" placeholder="Dirty Task">
+            </div>
+            <div class="large-4 columns">
+              <input type="text" placeholder="Obnoxious Celebrity">
+            </div>
+        </div>
+        <div class="row">
+            <div class="large-4 columns">
+              <input type="text" placeholder="Job Title">
+            </div>
+            <div class="large-4 columns">
+              <input type="text" placeholder="Celebrity">
+            </div>
+            <div class="large-4 columns">
+              <input type="number" placeholder="Huge Number">
+            </div>
+        </div>
+        <div class="row">
+          <div class="large-4 columns">
+            <input type="text" placeholder="Tedious Task">
+          </div>
+          <div class="large-4 columns">
+            <input type="text" placeholder="Useless Skill">
+          </div>
+          <div class="large-4 columns">
+            <input type="text" placeholder="Adjective">
+          </div>
+        </div>
+
+        <div class="row send">
+          <div class="large-12 columns">
+            <div class="button">Generate Mad Lib</div>
+          </div>
+        </div>
+      </div>
+
+      <div class="content-wrap">
+        <div class="row">
+          <div class="large-12 columns">
+            <strong style="text-decoration: underline;">{{ your_name }}</strong> was a <strong style="text-decoration: underline;">{{ job_title }}</strong> who loved technology. Although {{ init.gen_option.he_she }} loved parts of {{ init.gen_option.his_her }} job, {{ init.gen_option.he_she }} absolutely hated <strong style="text-decoration: underline;">{{ tedious_task }}</strong> and <strong style="text-decoration: underline;">{{dirty_task }}</strong>. So, <strong style="text-decoration: underline;">{{ your_name }}</strong> met with {{ init.gen_option.his_her }} life mentor <strong style="text-decoration: underline;">{{ celebrity }}</strong> who told {{ init.gen_option.him_her }} to learn how to <strong style="text-decoration: underline;">{{ useless_skill }}</strong> with Thinkful. Thinkful didn&rsquo;t offer a course on <strong style="text-decoration: underline;">{{ useless_skill }}</strong> so {{ init.gen_option.he_she }} studied programming instead.
+            <br>
+            <br>
+            What a great decision! With {{ init.gen_option.his_her }} new skills, <strong style="text-decoration: underline;">{{ your_name }}</strong> built a(n) <strong style="text-decoration: underline;">{{ adjective }}</strong> robot named <strong style="text-decoration: underline;">{{ obnox_celeb }}</strong> that not only loved <strong style="text-decoration: underline;">{{ dirty_task }}</strong> but did it <strong style="text-decoration: underline;">{{ huge_number }}</strong> faster.
+          </div>
+        </div>
+      </div>
+    </div>
+    <script src="js/vendor/jquery.js"></script>
+    <script src="js/foundation.min.js"></script>
+    <script>
+      $(document).foundation();
+    </script>
+  </body>
 </html>
-
-
-
-
-
